--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,9 @@ header {
         }
 
         .carousel {
+            
+            width: 100%;
+
             padding: 20px 0;
             .flickity-page-dots {
                 display: none !important;
@@ -231,8 +234,7 @@ header {
             }
 
             .carousel-cell {
-                width: 300px;
-                height: 490px;
+               width: 70.1%;
 
                 padding: 20px 5px;
                 margin-right: 20px;
@@ -241,35 +243,50 @@ header {
 
                 border-radius: 20px;
                 counter-increment: carousel-cell;
-
+                box-shadow: 0 2px 10px rgba(255, 255, 255, 0.404);
                 a {
                     text-decoration: none !important;
                     .img {
                         text-align: center;
                         img {
-                            width: 200px;
+                            width: 66.66%;
                             margin-bottom: 20px;
                         }
                     }
 
                     .descricao {
-                        p {
-                            margin-bottom: 10px;
+                        .desc {
+
+                            display: -webkit-box;
+                             -webkit-box-orient: vertical; 
+                             overflow: hidden;
+                              text-overflow: ellipsis; 
+                              -webkit-line-clamp: 2;
+                            margin-bottom: 5px;
                             font-size: 16px;
+                            font-family: montserrat !important;
+                            font-weight: bold;
                             color: white;
+                            
                         }
                         .preco {
                             color: rgb(255, 208, 0);
 
                             font-size: 26px;
                             font-weight: bold;
+                            font-family: "montserrat";
 
-                            margin-bottom: 10px;
+                            margin: 0;
                         }
                         .sub_preco {
+                            font-family: Arial, Helvetica, sans-serif;
                             color: white;
-                            width: 150px;
+                            width: 160px;
                             font-size: 14px;
+                            margin: 0;
+                            span {
+                                font-weight: bold;
+                            }
                         }
                     }
                 }
