--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,13 @@
     --text_white: #ffffff;
     --text_black: #000000;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 #barra_menu {
     background-color: var(--text_white);
     height: 2px;
@@ -37,6 +39,7 @@ header {
 
             .container-fluid {
                 padding: 0 10px 15px 10px !important;
+
                 .logo {
                     align-content: center !important;
 
@@ -59,6 +62,7 @@ header {
                     display: flex;
                     align-content: center !important;
                     gap: 15px;
+
                     a {
                         color: var(--text_white) !important;
                         font-size: 34px !important;
@@ -69,6 +73,7 @@ header {
                         height: 43px !important;
                         border: solid 2px var(--text_white) !important;
                         margin-top: 2px;
+
                         .navbar-toggler-icon {
                             filter: invert(100%) !important;
                         }
@@ -78,6 +83,7 @@ header {
 
             .collapse {
                 margin-top: 10px;
+
                 .navbar-nav {
                     .nav-item {
                         .dropdown-menu-1 {
@@ -94,9 +100,11 @@ header {
                                         margin-right: 5px;
                                         font-size: 22px;
                                     }
+
                                     color: white;
                                     font-size: 18px;
                                     font-weight: bold;
+
                                     &:hover {
                                         background-color: transparent !important;
                                     }
@@ -117,6 +125,7 @@ header {
                                     color: white;
                                     font-size: 18px;
                                     font-weight: bold;
+
                                     &:hover {
                                         background-color: transparent !important;
                                     }
@@ -176,6 +185,7 @@ header {
 
                 a {
                     color: #d9d9d9 !important;
+
                     svg {
                         width: 40px;
                     }
@@ -185,14 +195,77 @@ header {
     }
 }
 
+main {
+    .conteiner_cadastro {
+        width: 90%;
+
+        margin: auto;
+        padding: 26px 10px;
+        margin-top: 20px;
+
+        background-image: linear-gradient(160deg, #ffffff33 0%, #00000033 100%);
+        border-radius: 20px;
+        border: solid 2px white;
+
+        h2 {
+
+            font-size: 18px;
+            margin-bottom: 26px;
+
+        }
+
+        form {
+            .conteiner_input {
+                input {
+                    width: 100%;
+                    height: 40px;
+
+                    background-color: rgba(255, 255, 255, 0.100);
+                    border: solid 1px white;
+                    border-radius: 50px;
+
+                    padding: 0 15px;
+                    margin-bottom: 20px;
+                    color: white;
+
+                }
+            }
+
+            input::placeholder {
+                color: rgba(255, 255, 255, 0.500);
+
+            }
+
+            .btn_login {
+                button {
+                    border: none;
+                    font-size: 18px;
+                    font-weight: bold;
+                    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.40);
+
+                    width: 110px;
+                    height: 40px;
+                    border-radius: 50px;
+                    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.800);
+
+                }
+            }
+
+
+        }
+
+    }
+}
+
 #main_home {
     width: 100%;
 
     .conteiner_carrosel {
+
         .categoria {
             margin: 25px 15px 0 15px;
-            border-bottom: solid 3px white ;
-            
+            border-bottom: solid 3px white;
+
 
             display: flex;
             justify-content: space-between;
@@ -208,6 +281,7 @@ header {
                 color: var(--text_white) !important;
                 font-size: 16px;
                 font-weight: bold;
+
                 p {
                     background-image: linear-gradient(90deg, #ffffff33 0%, #00000033 100%);
                     border: solid 1px var(--text_white);
@@ -218,28 +292,30 @@ header {
         }
 
         .carousel {
-            
+
             width: 100%;
 
             padding: 20px 0;
+
             .flickity-page-dots {
                 display: none !important;
             }
+
             .flickity-button {
-                 background-color: transparent !important; 
-                
-                 
+                background-color: transparent !important;
+
+
                 transform: translateY(-200%);
-                
+
                 svg {
                     color: white !important;
                     opacity: 100% !important;
-                    
+
                 }
             }
 
             .carousel-cell {
-               width: 70.1%;
+                width: 70.1%;
 
                 padding: 20px 5px;
                 margin-right: 20px;
@@ -249,10 +325,13 @@ header {
                 border-radius: 20px;
                 counter-increment: carousel-cell;
                 box-shadow: 0 2px 10px rgba(255, 255, 255, 0.404);
+
                 a {
                     text-decoration: none !important;
+
                     .img {
                         text-align: center;
+
                         img {
                             width: 66.66%;
                             margin-bottom: 20px;
@@ -263,17 +342,18 @@ header {
                         .desc {
 
                             display: -webkit-box;
-                             -webkit-box-orient: vertical; 
-                             overflow: hidden;
-                              text-overflow: ellipsis; 
-                              -webkit-line-clamp: 2;
+                            -webkit-box-orient: vertical;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            -webkit-line-clamp: 2;
                             margin-bottom: 5px;
                             font-size: 14px;
                             font-family: montserrat !important;
                             font-weight: bold;
                             color: white;
-                            
+
                         }
+
                         .preco {
                             color: rgb(255, 208, 0);
 
@@ -283,18 +363,21 @@ header {
 
                             margin: 0;
                         }
+
                         .sub_preco {
                             font-family: Arial, Helvetica, sans-serif;
                             color: white;
                             width: 170px;
                             font-size: 15px;
                             margin: 0;
+
                             span {
                                 font-weight: bold;
                             }
                         }
                     }
                 }
+
                 &:before {
                     display: block;
                     text-align: center;
