ajuste de cadastro

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
 
     .nav_mobile {
         .navbar {
+            
             /* ajuste do navbar */
             width: 100% !important;
             background-color: transparent !important;
@@ -82,6 +83,7 @@ header {
             }
 
             .collapse {
+                overflow: hidden !important;
                 margin-top: 10px;
 
                 .navbar-nav {
@@ -201,15 +203,17 @@ main {
 
         margin: auto;
         padding: 26px 10px;
-        margin-top: 20px;
+        margin-top: 40px;
 
-        background-image: linear-gradient(160deg, #ffffff33 0%, #00000033 100%);
+        background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.1) 100%);
         border-radius: 20px;
         border: solid 2px white;
+        text-align:center ;
 
         h2 {
 
             font-size: 18px;
+            font-weight: bold;
             margin-bottom: 26px;
 
         }
@@ -229,14 +233,17 @@ main {
                     color: white;
 
                 }
-            }
-
-            input::placeholder {
+            } input::placeholder {
                 color: rgba(255, 255, 255, 0.500);
 
-            }
+                }
 
             .btn_login {
+                display: flex;
+                justify-content: center;
+                gap: 20px;
+
+                margin: 20px 0;
                 button {
                     border: none;
                     font-size: 18px;
@@ -246,11 +253,16 @@ main {
                     width: 110px;
                     height: 40px;
                     border-radius: 50px;
-                    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.800);
+                   
 
                 }
             }
 
+            .login_exist {
+                margin-top: 10px;
+                color: var(--text_white);
+                font-weight: bold;
+            }
 
         }
 
