--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,15 @@ header {
     padding-bottom: 120px;
 
     .nav_mobile {
+
         .navbar {
-            
-            /* ajuste do navbar */
+
             width: 100% !important;
+
             background-color: transparent !important;
             backdrop-filter: blur(5px);
             border-bottom: solid 2px white;
+
             padding: 10px 0 10px 0 !important;
 
             .container-fluid {
@@ -51,17 +53,20 @@ header {
                     }
 
                     .nome_logo {
-                        padding: 5px 0 0 10px !important;
-                        margin: 0 !important;
+
                         color: var(--text_white) !important;
                         font-weight: bold !important;
                         font-size: 18px !important;
+
+                        padding: 5px 0 0 10px !important;
+                        margin: 0 !important;
                     }
                 }
 
                 .area_botao {
                     display: flex;
                     align-content: center !important;
+
                     gap: 15px;
 
                     a {
@@ -72,6 +77,7 @@ header {
                     .navbar-toggler {
                         width: 60px !important;
                         height: 43px !important;
+
                         border: solid 2px var(--text_white) !important;
                         margin-top: 2px;
 
@@ -90,6 +96,7 @@ header {
                     .nav-item {
                         .dropdown-menu-1 {
                             width: 60%;
+
                             background-color: rgba(0, 0, 0, 0.205);
                             border-radius: 15px;
                             border: solid 2px white !important;
@@ -116,6 +123,7 @@ header {
 
                         .dropdown-menu-2 {
                             width: 60%;
+
                             background-color: rgba(0, 0, 0, 0.205);
                             border-radius: 15px;
                             border: solid 2px white !important;
@@ -162,26 +170,31 @@ header {
                         padding: 6px 0 0 5px;
 
                         a {
+                            height: 20px;
+
                             color: var(--text_white) !important;
                             font-size: 16px;
                             font-weight: bold;
                             text-decoration: none;
-                            height: 20px;
+
                         }
                     }
                 }
             }
 
             form {
+
                 margin: auto;
                 gap: 15px;
 
                 input {
-                    border-radius: 50px;
-                    border: none !important;
                     height: 40px !important;
                     width: 260px !important;
+
                     background-color: #d9d9d9 !important;
+                    border-radius: 50px;
+                    border: none !important;
+
                     padding: 0 15px !important;
                 }
 
@@ -197,7 +210,7 @@ header {
     }
 }
 
-main {
+#main_area_login {
     .conteiner_cadastro {
         width: 90%;
 
@@ -205,17 +218,17 @@ main {
         padding: 26px 10px;
         margin-top: 40px;
 
-        background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.1) 100%);
+        background-image: linear-gradient(160deg,
+                rgba(255, 255, 255, 0.1) 0%,
+                rgba(0, 0, 0, 0.1) 100%);
         border-radius: 20px;
         border: solid 2px white;
-        text-align:center ;
+        text-align: center;
 
         h2 {
-
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 26px;
-
         }
 
         form {
@@ -228,44 +241,66 @@ main {
                     border: solid 1px white;
                     border-radius: 50px;
 
-                    padding: 0 15px;
-                    margin-bottom: 20px;
                     color: white;
 
+                    padding: 0 15px;
+                    margin-bottom: 20px;
                 }
-            } input::placeholder {
-                color: rgba(255, 255, 255, 0.500);
 
+                p {
+                    font-weight: 600;
+                    margin-bottom: 8px;
                 }
+
+                .data {
+                    width: 50% !important;
+                }
+
+                .data::placeholder {
+                    font-weight: bold;
+                }
+            }
+
+            input::placeholder {
+                color: rgba(255, 255, 255, 0.500);
+            }
 
             .btn_login {
                 display: flex;
                 justify-content: center;
-                gap: 20px;
 
+                gap: 20px;
                 margin: 20px 0;
-                button {
-                    border: none;
-                    font-size: 18px;
-                    font-weight: bold;
-                    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.40);
+
+                a {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    background-color: var(--BG_segundario);
+                    border-radius: 50px;
+                    text-decoration: none;
 
                     width: 110px;
                     height: 40px;
-                    border-radius: 50px;
-                   
 
+                    p {
+                        color: var(--text_black);
+                        font-weight: bold;
+                        font-size: 18px;
+
+                        margin-bottom: 0;
+                    }
                 }
             }
 
             .login_exist {
+
                 margin-top: 10px;
                 color: var(--text_white);
                 font-weight: bold;
             }
-
         }
-
     }
 }
 
@@ -273,11 +308,9 @@ main {
     width: 100%;
 
     .conteiner_carrosel {
-
         .categoria {
             margin: 25px 15px 0 15px;
             border-bottom: solid 3px white;
-
 
             display: flex;
             justify-content: space-between;
@@ -295,7 +328,9 @@ main {
                 font-weight: bold;
 
                 p {
-                    background-image: linear-gradient(90deg, #ffffff33 0%, #00000033 100%);
+                    background-image: linear-gradient(90deg,
+                            #ffffff33 0%,
+                            #00000033 100%);
                     border: solid 1px var(--text_white);
                     border-radius: 20px;
                     padding: 5px 10px;
@@ -304,7 +339,6 @@ main {
         }
 
         .carousel {
-
             width: 100%;
 
             padding: 20px 0;
@@ -316,20 +350,18 @@ main {
             .flickity-button {
                 background-color: transparent !important;
 
-
                 transform: translateY(-200%);
 
                 svg {
                     color: white !important;
                     opacity: 100% !important;
-
                 }
             }
 
             .carousel-cell {
                 width: 70.1%;
 
-                padding: 20px 5px;
+                padding: 20px 10px;
                 margin-right: 20px;
                 background-color: #ffffff1f;
                 border: solid 2px white;
@@ -352,18 +384,16 @@ main {
 
                     .descricao {
                         .desc {
-
                             display: -webkit-box;
                             -webkit-box-orient: vertical;
                             overflow: hidden;
                             text-overflow: ellipsis;
                             -webkit-line-clamp: 2;
                             margin-bottom: 5px;
-                            font-size: 14px;
+                            font-size: 15px;
                             font-family: montserrat !important;
                             font-weight: bold;
                             color: white;
-
                         }
 
                         .preco {
