--- a/css/style.css
+++ b/css/style.css
@@ -212,26 +212,26 @@ header {
 
 #area_login {
     width: 100%;
-    
+
     margin: 20px 0;
 
     .conteiner_login {
         width: 95%;
 
-        background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%,  rgb(0, 0, 0,0.1) 100%);
+        background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
         border: solid 2px white;
         border-radius: 20px;
         text-align: center;
 
         padding: 26px 20px;
-        margin: auto ;
-        margin-bottom: 20px ;
+        margin: auto;
+        margin-bottom: 20px;
 
         h2 {
             font-size: 16px;
             font-weight: bold;
 
-            text-align: center ;
+            text-align: center;
             margin-bottom: 26px;
 
         }
@@ -249,14 +249,15 @@ header {
                 padding: 0 10px;
 
             }
-                
-                        text-align: start;
+
+            text-align: start;
+
             .senha {
                 color: rgba(255, 255, 255, 0.700);
                 transition: all 300ms !important;
                 margin-left: 10px;
                 font-weight: 300;
-            
+
 
 
                 &:hover {
@@ -265,12 +266,13 @@ header {
             }
 
             .btn_login {
-                display: flex; 
-                justify-content: center;    
+                display: flex;
+                justify-content: center;
 
                 gap: 20px;
                 margin: 30px 0 30px 0;
-                a {
+
+                #link {
 
                     display: flex;
                     justify-content: center;
@@ -287,6 +289,7 @@ header {
 
                     background-color: white;
                     border-radius: 20px;
+                    border: none;
 
                 }
             }
@@ -308,15 +311,15 @@ header {
         gap: 30px;
 
         a {
-            
+
             display: flex;
             justify-content: center;
             align-items: center;
 
             height: 50px;
-           
-            background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%,  rgb(0, 0, 0,0.1) 100%);
-            border: solid 2px white ;
+
+            background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+            border: solid 2px white;
             border-radius: 50px;
 
             padding: 0 15px;
@@ -327,9 +330,10 @@ header {
             font-weight: bold;
             font-size: 20px;
 
-                i {
-                    margin-right: 5px;
-                }
+            i {
+                margin-right: 5px;
+                font-size: 27px;
+            }
 
         }
     }
