--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,10 @@ header {
     }
 }
 
+footer {
+    margin-top: 40px;
+}
+
 #area_login {
     width: 100%;
 
@@ -237,6 +241,9 @@ header {
         }
 
         .form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             input {
                 width: 100%;
                 height: 40px;
@@ -248,6 +255,18 @@ header {
 
                 padding: 0 10px;
 
+            }
+
+            p {
+                text-align: center;
+                font-weight: bold;
+                margin-bottom: 8px;
+            }
+
+            .conteiner_data {
+                display: flex;
+                justify-content: center;
+        
             }
 
             text-align: start;
