--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,29 @@ footer {
     margin-top: 40px;
 }
 
+#area_endereco {
+    width: 100%;
+    margin: 20px 0;
+
+    .conteiner_endereco {
+        width: 95%;
+
+        background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+        border: solid 2px white;
+        border-radius: 20px;
+
+        padding: 26px 20px;
+        margin: auto;
+        margin-bottom: 20px;
+
+        h2 {
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+        }
+    }
+}
+
 #area_login {
     width: 100%;
 
@@ -244,6 +267,7 @@ footer {
             display: flex;
             flex-direction: column;
             justify-content: center;
+
             input {
                 width: 100%;
                 height: 40px;
@@ -266,7 +290,7 @@ footer {
             .conteiner_data {
                 display: flex;
                 justify-content: center;
-        
+
             }
 
             text-align: start;
@@ -356,6 +380,24 @@ footer {
 
         }
     }
+
+    .check {
+        width: 95%;
+        margin: auto;
+
+        label {
+            margin-bottom: 10px;
+
+            font-weight: bold;
+
+        }
+
+        a {
+            color: white;
+
+        }
+    }
+
 }
 
 #main_home {
