--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,8 @@ body {
 }
 
 header {
-    padding-bottom: 130px;
-
     .nav_mobile {
+        padding-bottom: 130px;
 
         .navbar {
 
@@ -436,7 +435,7 @@ footer {
 
             input {
                 width: 100%;
-                height: 40px;
+                height: 42px;
 
                 background-color: rgb(217, 217, 217, 0.1);
                 border-radius: 20px;
@@ -558,6 +557,7 @@ footer {
     .check {
         width: 95%;
         margin: auto;
+        margin-top: 20px;
 
         label {
             margin-bottom: 10px;
@@ -610,6 +610,7 @@ footer {
 
         .carousel {
             width: 100%;
+            position: relative;
 
             padding: 20px 0;
 
@@ -627,6 +628,7 @@ footer {
                     opacity: 100% !important;
                 }
             }
+
 
             .carousel-cell {
                 width: 70.1%;
@@ -699,8 +701,31 @@ footer {
                 }
             }
         }
-    }
 
+        .carousel::before,
+        .carousel::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 10%;
+            pointer-events: none;
+            z-index: 2;
+        }
+
+        .carousel::before {
+            left: 0;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0.7), transparent 20%);
+            filter: blur(8px);
+        }
+
+        .carousel::after {
+            right: 0;
+            background: linear-gradient(to left, rgba(0, 0, 0, 0.7), transparent 20%);
+            filter: blur(8px);
+        }
+
+    }
 }
 
 #main_detalhe {
@@ -857,7 +882,7 @@ footer {
                         background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
                         border: solid 1px #ffffff;
                         border-radius: 50px;
-                        
+
                     }
                 }
 
@@ -914,7 +939,7 @@ footer {
                         button {
                             width: 76px;
                             height: 50px;
-                            
+
                             border-radius: 20px;
                             border: solid 1px white;
                             border-radius: 50px;
@@ -1009,4 +1034,165 @@ footer {
     }
 
 
+}
+
+@media (min-width: 600px) {
+    #conteiner_carrosel {
+        .carousel {
+            .carousel-cell {
+                width: 224px;
+                padding: 20px 5px;
+
+                a {
+                    text-decoration: none !important;
+
+                    .descricao {
+                        .desc {
+
+                            font-size: 10px;
+                            font-weight: bold;
+
+                        }
+
+                        .preco {
+                            font-size: 18px;
+                        }
+
+                        .sub_preco {
+                            width: 120px;
+                            font-size: 10px;
+                        }
+                    }
+                }
+
+
+            }
+        }
+    }
+
+    header {
+        .nav_mobile {
+            .navbar {
+                form {
+                    input {
+                        width: 400px !important;
+                    }
+                }
+            }
+        }
+    }
+
+    #main_home {
+        .conteiner_carrosel {
+            .carousel {
+                .carousel-cell {
+                    width: 224px;
+                    padding: 20px 5px;
+
+                    a {
+                        text-decoration: none !important;
+
+                        .descricao {
+                            .desc {
+
+                                font-size: 10px;
+                                font-weight: bold;
+
+                            }
+
+                            .preco {
+                                font-size: 18px;
+                            }
+
+                            .sub_preco {
+                                width: 120px;
+                                font-size: 10px;
+                            }
+                        }
+                    }
+
+
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 640px) {
+    #area_login {
+        .conteiner_login {
+            width: 640px;
+
+            form {
+                width: 396px;
+                margin: auto;
+            }
+        }
+
+        .check {
+            margin-top: 40px;
+            width: 640px;
+        }
+    }
+
+
+}
+
+@media (min-width: 830px) {
+
+    #main_home {
+        .conteiner_carrosel {
+            .carousel {
+                .carousel-cell {
+                    width: 224px;
+                    padding: 20px 5px;
+
+                    a {
+                        text-decoration: none !important;
+
+                        .descricao {
+                            .desc {
+
+                                font-size: 10px;
+                                font-weight: bold;
+
+                            }
+
+                            .preco {
+                                font-size: 18px;
+                            }
+
+                            .sub_preco {
+                                width: 120px;
+                                font-size: 10px;
+                            }
+                        }
+                    }
+
+
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1000px) {
+    header {
+        .nav_mobile {
+            display: none;
+        }
+    }
+
+    #main_home {
+        width: 100%;
+        margin: auto;
+    }
+}
+
+@media (min-width: 1200px) {
+    #main_home {
+        width: 1200px;
+        margin: auto;
+
+    }
 }
