--- a/css/style.css
+++ b/css/style.css
@@ -1020,7 +1020,7 @@ footer {
 
                     font-size: 14px;
                     font-weight: bold;
-                    margin-bottom: 40px;
+                    margin-bottom: 20px;
                 }
 
                 p {
@@ -1046,6 +1046,10 @@ footer {
             }
 
             .compra {
+                width: 100%;
+                display: flex;
+                flex-direction: column !important;
+
                 .conteiner_preco {
                     margin-bottom: 40px;
 
@@ -1462,7 +1466,44 @@ footer {
     #main_home {
         width: 1200px;
         margin: auto;
+    }
 
+    #main_detalhe {
+        width: 1200px;
+        margin: 30px auto;
+
+        .titulo {
+            display: none;
+        }
+
+        .conteiner_produto_flex {
+            width: 100%;
+            margin: 0;
+            padding: 0;
+
+            .conteiner_produto {
+                width: 550px;
+                height: 550px;
+
+                img {
+                    width: 399px;
+                }
+            }
+
+            .conteiner_descricao {
+                .titulo2 {
+                    display: block;
+                }
+
+                .compra {
+                    flex-direction: row !important;
+
+                    justify-content: space-between;
+                    align-items: start;
+
+                }
+            }
+        }
     }
 }
 
